# Pyxis

./: .gitignore  CMakeLists.txt  CMakePresets.json  PyxisConfig.cmake.in  README.md  TEXT_RENDERING.md  compile_commands.json  vcpkg.json
assets/shaders/: TextureFragment.hlsl  text_fragment.hlsl  text_vertex.hlsl  vertex.hlsl
include/: Pyxis.h
include/Components/: TransformComponent.h
include/Core/: Application.h  Core.h  Entity.h  EntryPoint.h  Input.h  Renderer.h  Timestep.h
include/Renderer/: Material.h  Pipeline.h  RenderCommand.h  Renderer.h  Text.h  Texture.h  VertexBuffer.h
src/Core/: Application.cpp  Entity.cpp  Input.cpp  Renderer.cpp
src/Renderer/: Pipeline.cpp  Renderer.cpp  Text.cpp  Texture.cpp
